fix:Let container don't overflow

--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -107,6 +107,7 @@ body::-webkit-scrollbar {
 #profile-outer-container {
   display: flex;
   justify-content: space-between;
+  height: 75vh;
   margin: 0 5vw;
 }
 
@@ -124,6 +125,7 @@ body::-webkit-scrollbar {
 
 .profile-inner-container img {
   width: 100%;
+  height: 55%;
   border-radius: 10px;
 }
 
